force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Checking</fullName>
            </value>
            <value>
                <fullName>Consumer Savings</fullName>
            </value>
            <value>
                <fullName>Business Checking</fullName>
            </value>
            <value>
                <fullName>Business Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>