force-app/main/default/objects/Account/fields/Assigned_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Attorney__c</fullName>
    <label>Assigned Attorney</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
                <default>true</default>
                <label>Attorney</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>