force-app/main/default/objects/Account/fields/Autocharge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Autocharge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autocharge Customer?</label>
    <type>Checkbox</type>
</CustomField>