force-app/main/default/objects/Account/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <description>When Billing Began</description>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>