force-app/main/default/objects/Account/fields/Card_CVV__c.field-meta.xml
<CustomField>
    <fullName>Card_CVV__c</fullName>
    <label>Card CVV</label>
    <length>3</length>
    <type>Text</type>
</CustomField>