force-app/main/default/objects/Account/fields/Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Card_Expiry_Date__c</fullName>
    <label>Card Expiry Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>