force-app/main/default/objects/Account/fields/Card_Type_If_Other__c.field-meta.xml
<CustomField>
    <fullName>Card_Type_If_Other__c</fullName>
    <label>Card Type (If Other)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>