force-app/main/default/objects/Account/fields/Current_AR_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_AR_Balance__c</fullName>
    <description>Outstanding balance</description>
    <label>Current AR Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>