force-app/main/default/objects/Account/fields/In_Person_Meeting__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-Person Meeting?</label>
    <type>Checkbox</type>
</CustomField>