force-app/main/default/objects/Account/fields/Initial_Case_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Case_Fee__c</fullName>
    <description>One-time setup fee</description>
    <label>Initial Case Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>