force-app/main/default/objects/Account/fields/Initial_Fee_Billed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if initial fee invoiced</description>
    <label>Initial Fee Billed</label>
    <type>Checkbox</type>
</CustomField>