force-app/main/default/objects/Account/fields/Mass_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mass Email List</label>
    <type>Checkbox</type>
</CustomField>