force-app/main/default/objects/Account/fields/Monthly_Case_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Case_Fee__c</fullName>
    <description>Recurring monthly fee</description>
    <label>Monthly Case Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>