force-app/main/default/objects/Account/fields/Payment_Method_On_File__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client has payment stored</description>
    <label>Payment Method On File</label>
    <type>Checkbox</type>
</CustomField>