force-app/main/default/objects/Account/fields/QBO_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Customer_ID__c</fullName>
    <label>QBO Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>