force-app/main/default/objects/Account/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <label>Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>