force-app/main/default/objects/Account/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <description>Stripe customer ID</description>
    <label>Stripe Customer ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>